- Fixed a host of bugs in wxMediaCtrl as well as added a GStreamer 0.10
  implementation
- Improved configure checks for GStreamer. You may also now specify
  --enable-gstreamer8 to force configure to check for GStreamer 0.8.\
- Fixed problem with choice editor in wxGrid whereby the editor
  lost focus when the combobox menu was shown.
- Fixed problem trying to print from a preview, whereby wrong printer
  class was used.
- Worked around pango crashes in strncmp on Solaris 10.
- Polygon and line drawing speeded up if there is no scaling.
- Fixed problems with CJK input method.
- Implemented ScrollLines/Pages() for all windows (Paul Cornett)
- Support underlined fonts in wxTextCtrl

wxMac:

- Fixed problem with clipboard support for custom data flavors.
- Fixed focus handling for generic controls in carbon-cfm.
- Fixed a printing crash bug, for example using File->Print and changing
  Popup from 'Copies & Pages' to e.g. 'Layout'.
- Improved support for help and application menu items.
- Added default implementations for wxTextCtrl::Replace and wxTextCtrl::Remove.
- Added support for 10.4 context menu.
- Added support for wxFRAME_EX_METAL and wxDIALOG_EX_METAL styles.
- Added wxNotebook::HitTest support.
- Corrected idle wake-up.
- Corrected wxExecute.
- Now makes use of full printer resolution.
- Corrected CGImage handling in wxBitmap.
- Now uses simple hide/show transition for top-level windows.
- Uses reasonable temporary path for wxFileName::CreateTempFileName.
- Added support for default key handling (escape, enter, command-period) even
  if there is no control on the frame or dialog that has the focus.
- Fixed joystick bugs including a link error and a crash if no joysticks
  were found.
- Removed an errorneous assertion from wxDir.
- Uses CoreFoundation based and thread-safe implementation for message boxes
  under Mach-O.
- wxBitmapButton is created as a content icon if wxBORDER_NONE is
  specified, otherwise as a bevel button.